--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <ul class="nav-links">
         <li><a href="../1.home/home.html">Home</a></li>
         <li class="dropdown">
-          <a href="../2.academics/index.html">Academics </a>
+          <a href="../2.academics/academics.html">Academics </a>
           <ul class="dropdown-menu">
-            <li><a href="../2.academics/index.html">Academics</a></li>
+            <li><a href="../2.academics/academics.html">Academics</a></li>
             <li><a href="../3.carriculam/curriculum.html">Curriculum</a></li>
             <li><a href="../4.department time table/timetable.html">Timetable</a></li>
             <li><a href="../10.faculty/faculty.html">Faculty Profiles</a></li>
