--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <nav>
       <ul class="nav-links">
-        <li><a href="../1.home/home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li class="dropdown">
           <a href="../2.academics/academics.html">Academics </a>
           <ul class="dropdown-menu">
